fix overflow

--- a/src/components/List/Row/Row.css
+++ b/src/components/List/Row/Row.css
@@ -20,14 +20,29 @@
     justify-content: space-evenly;
     align-items: center;
     text-transform: capitalize;
+    font-size: 20px;
 }
 
 .characterContainer {
-    padding: 1rem;
+    padding: 0.5rem;
+    margin: 0.2rem;
+    border: 1px gray solid;
+    border-radius: 5px;
+    background-color: var(--color-text2);
+    box-shadow: 1px 1px 7px var(--color-text);
+    color: black;
+    width: 3rem;
+    height: 3rem;
+}
+
+.characterEnteredContainer {
+    padding: 0.5rem;
     margin: 0.2rem;
     border: 1px var(--color-secondary) solid;
     border-radius: 5px;
     background-color: var(--color-primary);
-    box-shadow: 1px 1px 10px var(--color-secondary);
-    color: black;
+    box-shadow: 1px 1px 7px var(--color-secondary);
+    color: var(--color-text3);
+    width: 3rem;
+    height: 3rem;
 }
